# pretix-payment-fees

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TRANSLATION_PROCESS.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
pretix_payment_fees/: __init__.py  admin_views.py  apps.py  forms.py  models.py  oauth_views.py  signals.py  urls.py  views.py
pretix_payment_fees/exporters/: __init__.py  accounting_report_psp.py  payment_list_psp.py
pretix_payment_fees/locale/: django.pot
pretix_payment_fees/locale/de/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/en/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/es/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/fr/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/it/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/nl/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/pl/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/locale/pt/LC_MESSAGES/: django.mo  django.po
pretix_payment_fees/management/: __init__.py
pretix_payment_fees/management/commands/: __init__.py  sync_psp_fees.py
pretix_payment_fees/migrations/: 0001_initial.py  0002_add_mollie_oauth_fields.py  0003_settlement_rate_cache.py  0004_add_auto_sync_fields.py
pretix_payment_fees/psp/: __init__.py  mollie_client.py  mollie_oauth_client.py  sumup_client.py
pretix_payment_fees/renderers/: accounting_pdf_renderer.py  csv_renderer.py  excel_renderer.py  pdf_renderer.py
pretix_payment_fees/services/: __init__.py  psp_sync.py
pretix_payment_fees/static/pretix_export_frais/: psp_sync.js
pretix_payment_fees/templates/pretix_payment_fees/: diagnostic.html  psp_sync.html  settings.html
tests/: conftest.py  test_models.py  test_placeholder.py  test_renderers.py  test_settings.py
