[build-system]
requires = ["setuptools>=61.0", "wheel", "django>=3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-payment-fees"
version = "0.9.0"
description = "Pretix plugin for tracking and reporting payment provider fees (Mollie, SumUp)"
readme = "README.md"
authors = [
    {name = "Valentin Gosselin", email = "valentin@gosselin.pro"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Spanish",
    "Natural Language :: Dutch",
    "Natural Language :: Italian",
    "Natural Language :: Portuguese",
    "Natural Language :: Polish",
]
keywords = [
    "pretix",
    "plugin",
    "payment",
    "fees",
    "mollie",
    "sumup",
    "psp",
    "accounting",
    "export"
]
requires-python = ">=3.11"
dependencies = [
    "weasyprint>=62.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/valentin-gosselin/pretix-payment-fees"
Documentation = "https://github.com/valentin-gosselin/pretix-payment-fees#readme"
Repository = "https://github.com/valentin-gosselin/pretix-payment-fees.git"
Issues = "https://github.com/valentin-gosselin/pretix-payment-fees/issues"
Changelog = "https://github.com/valentin-gosselin/pretix-payment-fees/blob/main/CHANGELOG.md"

[project.entry-points."pretix.plugin"]
pretix_payment_fees = "pretix_payment_fees:PluginApp"

[tool.setuptools]
packages = ["pretix_payment_fees"]
include-package-data = true

[tool.setuptools.package-data]
pretix_payment_fees = [
    "locale/*/LC_MESSAGES/*.po",
    "locale/*/LC_MESSAGES/*.mo",
    "static/**/*",
    "templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_django = ["django", "rest_framework", "pretix"]
known_first_party = ["pretix_payment_fees"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", ".venv", "venv", "build"]
skip_glob = ["*/migrations/*"]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
]